# Rag-Processing-Hub

./: LICENSE  README.md  pyproject.toml  requirements.txt
app/: constants.py  main.py  middleware.py
app/commons/enums/: file_enums.py
app/database/schemas/: files.py
app/database/sqlalchemy/: __init__.py  files_repo.py  main.py
app/rag/embeddings/: embeddings_service.py
app/rag/retrieval/: retrieval_service.py
app/routers/: chunking.py  digitization.py  orchestrator.py  postprocessing.py  rag.py
app/routers/speech/: speech_to_text.py  text_to_speech.py
app/routes/: __init__.py  file_crud.py  routes.py  version.py
commons/: constants.py
commons/enums/: __init__.py
database/schemas/: __init__.py  files.py
database/sql_alchemy/: __init__.py  files_repo.py  main.py  utils.py
routes/: file_crud.py  routes.py
services/rag/: rag_service.py
services/rag/embeddings/: factories.py
services/rag/vectordb/: vectordb_service.py
