[tool.poetry]
name = "rag-processing-hub"
version = "0.1.0"
description = ""
authors = ["Kartikey Gupta <kartikey071999@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastapi = "^0.115.0"
python-multipart = "^0.0.10"
pydantic = "^2.4.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"  # For async PostgreSQL
alembic = "^1.13.1"  # For database migrations
pymongo = "^4.9.2"  # MongoDB support
aiosqlite = "^0.20.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
isort = "^5.13.2"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
